removed unneeded js, fixed bullet alignment

--- a/styl/pages/report.styl
+++ b/styl/pages/report.styl
@@ -24,7 +24,7 @@
         content: ''
         position: absolute
         left: -26px
-        top: 8px
+        top: 4px
         background: $blue-lighter
         border: 1px solid $blue
         border-radius: 100%
